# adotei

./: README.md
.github/workflows/: rust-audit.yaml  rust-general.yaml
dog-service/: Cargo.toml  build.rs  docker-compose.yaml  flake.nix
dog-service/.cargo/: config.toml
proto/: dog.proto
