[package]
name = "dog-service"
version = "0.1.0"
edition = "2021"
authors = ["Said Rodrigues <coderflemis@gmail.com>"]

[dependencies]
anyhow = "1.0.86"
prost = "0.13.1"
sqlx = { version = "0.7.4", features = [ "mysql", "chrono" ] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"
